# node-gs

./: README.md  package-lock.json  package.json
lib/: emitter.js  emitter.test.js  index.js
native/: Cargo.toml
native/src/: lib.rs
