[package]
name = "node-gs"
version = "0.1.0"
authors = ["Luke Moscrop <luke.moscrop@bbc.co.uk>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "node_gs"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.4"

[dependencies]
neon = "0.4"
glib = "0.9"
gstreamer = "0.15"
gstreamer-base = "0.15"